tests/machine/x/hs/values_builtin.error

/workspace/mochi/tests/machine/x/hs/values_builtin.hs:109:10: error:
    Variable not in scope: values :: Map.Map String a0 -> a1
    |
109 |   print (values m)
    |          ^^^^^^


Context around line 109:
  107| main :: IO ()
  108| main = do
  109|   print (values m)
  110| 
